--- a/asset/users/dashboard/css/style.css
+++ b/asset/users/dashboard/css/style.css
@@ -25,13 +25,13 @@
   display: flex;
 }
 /* --------------Content----------------- */
-.content{display: flex;min-height:calc(100vh - 117px);transition: 0.5s all}
+.content{display: flex;height:calc(100vh - 127px);transition: 0.5s all;overflow-y:scroll;}
 /* -------------- Footer ----------------- */
-.footer{display: flex;justify-content: center;padding: 15px;}
+.footer{ display: flex;justify-content: center;padding: 15px;}
 /*****************************************
                   app sidebar 
  *****************************************/
- .app-sidebar{width: 250px;float:right;min-height: 100vh;transition: 0.5s all;overflow-y: auto;}
+ .app-sidebar{width: 250px;float:right;min-height: 100vh;transition: 0.5s all;overflow-y: auto;height:auto !important}
  .side{margin-right:-250px;}
  .logo-box{padding: 10px;}
  .logo-image{border-radius: 50%;}
