--- a/asset/users/store/css/style.css
+++ b/asset/users/store/css/style.css
@@ -22,6 +22,14 @@
  *****************************************/
   /*---------------- slider-----------  */
 .slide img{height:450px;}
+/* تنسيق الكارد بشكل افتراضي */
+.thank-you-card {
+  width: 100%;
+  max-width: 400px;
+  margin: 1rem;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  border-radius: 1rem;
+}
 /*****************************************
                   footer 
  *****************************************/
